<resources>
    <string name="app_name">Hidden</string>
    <string name="register_pemilik">REGISTER PEMILIK</string>
    <string name="login">LOGIN</string>
    <string name="reg_akun_karyawan">REGISTER</string>
    <string name="reg_perusahaan_atas">Register Akun Perusahaan</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="nama_perusahaan">Nama Perusahaan</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login1">Login</string>
    <string name="email1">Email</string>
    <string name="password1">Password</string>
    <string name="reg_wajah">Registrasi Wajah</string>
    <string name="add_face">Add Face</string>
    <string name="reg_perusahaan">Register Perusahaan</string>
    <string name="email2">Email Perusahaan</string>
    <string name="nama_perusahaan1">Nama Perusahaan</string>
    <string name="nama_pemilik">Nama Pemilik</string>
    <string name="alamat">Alamat Perusahaan</string>
    <string name="no_telepon">No Telepon</string>
    <string name="tahun_berdiri">Tahun Berdiri</string>
    <string name="bidang">Bidang Perusahaan</string>
    <string name="atur_jam_masuk">Atur Jam Masuk</string>
    <string name="atur_jam_pulang">Atur Jam Pulang</string>
    <string name="lokasi">Lokasi</string>
    <string name="select_gambar">Pilih Gambar</string>
    <string name="lokasi_saat_ini">Dapatkan Lokasi Saat Ini</string>
    <string name="lihat_lokasi">Lihat Lokasi</string>
    <string name="hitung">Hitung</string>
    <string name="confirm_lokasi">Konfirmasi Lokasi Absensi</string>
    <string name="meter_lokasi">Tentukan berapa meter dari titik lokasi</string>
    <string name="karyawan">Karyawan</string>
    <string name="karyawan1">Karyawan123</string>
    <string name="check_in">Check In</string>
    <string name="check_out">Check Out</string>
    <string name="perusahaan">perusahaan</string>
    <string name="profil">Profil</string>
    <string name="perusahaan1">Perusahaan</string>
    <string name="perusahaan2">Perusahaan 123</string>
    <string name="edit_perusahaan">Edit Perusahaan</string>
    <string name="informasi">Informasi</string>
    <string name="lap_absensi">Laporan Absensi</string>
    <string name="absensi_harian">Absensi Harian</string>
    <string name="nama_perusahaan2">PT. Hidden Group</string>
    <string name="nama_pemilik1">Mr. Asdfg (CEO)</string>
    <string name="alamat1">Alamat</string>
    <string name="content_alamat">Jl. Perintis Kemerdekaan No. 123, Jakarta Utara</string>
    <string name="no_hp">123456789012</string>
    <string name="nomor_telp">Nomor Telepon</string>
    <string name="tahun_berdiri1">Tahun Berdiri</string>
    <string name="content_tahun_berdiri">2000</string>
    <string name="bidang1">Bidang</string>
    <string name="content_bidang">Keuangan</string>
    <string name="btn_edit_perusahaan">Edit</string>
    <string name="id_karyawan">ID Karyawan</string>
    <string name="email_karyawan">Email Karyawan</string>
    <string name="nama_karyawan">Nama Lengkap Karyawan</string>
    <string name="alamat_karyawan">Alamat Karyawan</string>
    <string name="nik_karyawan">NIK</string>
    <string name="pass_karyawan">Password</string>
    <string name="confirm_pass_karyawan">Konfirmasi Password</string>
    <string name="daftarkan" />
    <string name="daftarkan_karyawan">Daftarkan Karyawan</string>
    <string name="btn_karyawan">Karyawan</string>
    <string name="btn_perusahaan">Perusahaan</string>
    <string name="lokasi_anda">(Lokasi Anda)</string>
</resources>