<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navy"
    tools:context=".RegPerusahaanActivity"
    >
    <Button
        android:id="@+id/btnRegisterPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/reg_perusahaan"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editEmailPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/email2"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNamaPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/nama_perusahaan1"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailPerusahaanRegPerusahaan" />

    <EditText
        android:id="@+id/editNoTelpPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/no_telepon"
        android:inputType="text|phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlamatPerusahaanRegPerusahaan" />

    <EditText
        android:id="@+id/editTahunBerdiriPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/tahun_berdiri"
        android:inputType="number"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNoTelpPerusahaanRegPerusahaan" />

    <EditText
        android:id="@+id/editBidangPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/bidang"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTahunBerdiriPerusahaanRegPerusahaan" />

    <Button
        android:id="@+id/btnAturJamMasukRegPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:text="@string/atur_jam_masuk"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBidangPerusahaanRegPerusahaan" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Jam Masuk : "
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLokasiRegPerusahaan"
        android:id="@+id/txtJamMasukRegPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Jam Pulang : "
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtJamMasukRegPerusahaan"
        android:id="@+id/txtJamPulangRegPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnLokasiRegPerusahaan"
        app:layout_constraintLeft_toRightOf="@+id/txtJamMasukRegPerusahaan"
        android:id="@+id/txtWaktuJamMasukRegPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWaktuJamMasukRegPerusahaan"
        app:layout_constraintLeft_toRightOf="@+id/txtJamPulangRegPerusahaan"
        android:id="@+id/txtWaktuJamPulangRegPerusahaan"/>

    <Button
        android:id="@+id/btnAturJamPulangRegPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"

        android:text="@string/atur_jam_pulang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnAturJamMasukRegPerusahaan"
        app:layout_constraintTop_toBottomOf="@+id/editBidangPerusahaanRegPerusahaan" />

    <EditText
        android:id="@+id/editAlamatPerusahaanRegPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/alamat"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNamaPerusahaanRegPerusahaan" />

    <Button
        android:id="@+id/btnLokasiRegPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"

        android:text="@string/lokasi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAturJamMasukRegPerusahaan" />

    <Button
        android:id="@+id/btnPilihGambarRegPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/select_gambar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/btnLokasiRegPerusahaan"
        app:layout_constraintTop_toBottomOf="@+id/btnAturJamPulangRegPerusahaan" />
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintTop_toBottomOf="@id/btnPilihGambarRegPerusahaan"
        android:id="@+id/imgPreviewPilihGambarRegPerusahaan"/>
<!--    <ImageView-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_marginTop="10dp"-->
<!--        android:layout_marginRight="120dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:src="@mipmap/ic_launcher_round"-->
<!--        app:layout_constraintTop_toBottomOf="@id/btnPilihGambarRegPerusahaan"-->
<!--        android:id="@+id/tesimgPreviewPilihGambarRegPerusahaan"/>-->
</androidx.constraintlayout.widget.ConstraintLayout>