<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditPerusahaanActivity"
    android:background="@color/navy">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whitetransparent"
        android:id="@+id/containerRelativeUploading"
        android:visibility="invisible"
        >

        <TextView
            android:id="@+id/txtUploadingEditPerusahaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Uploading ..."
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/progressUploadEditPerusahaan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtUploadingEditPerusahaan"
            android:layout_centerHorizontal="true"
            android:text="0.0%"
            android:textSize="20sp" />
    </RelativeLayout>
    <EditText
        android:id="@+id/editBidangPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/content_bidang"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBidangPerusahaanEditPerusahaan" />

    <TextView
        android:id="@+id/txtBidangPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/bidang1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTahunBerdiriPerusahaanEditPerusahaan" />

    <EditText
        android:id="@+id/editTahunBerdiriPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/content_tahun_berdiri"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTahunBerdiriPerusahaanEditPerusahaan" />

    <TextView
        android:id="@+id/txtTahunBerdiriPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tahun_berdiri1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNoTeleponPerusahaanEditPerusahaan" />

    <EditText
        android:id="@+id/editNoTeleponPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/no_hp"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNoTeleponPerusahaanEditPerusahaan" />

    <TextView
        android:id="@+id/txtNoTeleponPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/nomor_telp"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAlamatPerusahaanEditPerusahaan" />

    <EditText
        android:id="@+id/editNamaPerusahaanEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="24dp"
        android:enabled="false"
        android:text="@string/nama_perusahaan2"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/imageGambarPerusahaanEditPerusahaan"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNamaPemilikEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="24dp"
        android:enabled="false"
        android:text="@string/nama_pemilik1"
        android:textColor="@color/white"
app:layout_constraintStart_toEndOf="@id/imageGambarPerusahaanEditPerusahaan"
        app:layout_constraintTop_toBottomOf="@+id/editNamaPerusahaanEditPerusahaan" />

    <ImageButton
        android:id="@+id/btnTambahKaryawanEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/navy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/add_user" />

    <ImageView
        android:id="@+id/imageGambarPerusahaanEditPerusahaan"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/editNamaPerusahaanEditPerusahaan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"
        android:background="@color/black"
        android:padding="1dp"/>

    <TextView
        android:id="@+id/txtAlamatPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/alamat1"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGambarPerusahaanEditPerusahaan" />

    <EditText
        android:textSize="16sp"
        android:id="@+id/editAlamatPerusahaanEditPerusahaan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:enabled="false"
        android:text="@string/content_alamat"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAlamatPerusahaanEditPerusahaan" />

    <Button
        android:id="@+id/btnEditEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/btn_edit_perusahaan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBidangPerusahaanEditPerusahaan" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Jam Masuk : "
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editBidangPerusahaanEditPerusahaan"
        android:id="@+id/txtJamMasukEditPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Jam Pulang : "
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtJamMasukEditPerusahaan"
        android:id="@+id/txtJamPulangEditPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editBidangPerusahaanEditPerusahaan"
        app:layout_constraintLeft_toRightOf="@+id/txtJamMasukEditPerusahaan"
        android:id="@+id/txtWaktuJamMasukEditPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWaktuJamMasukEditPerusahaan"
        app:layout_constraintLeft_toRightOf="@+id/txtJamPulangEditPerusahaan"
        android:id="@+id/txtWaktuJamPulangEditPerusahaan"/>
    <Button
        android:id="@+id/btnAturJamMasukEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:visibility="invisible"
        android:text="@string/atur_jam_masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCekLokasiPerusahaanEditPerusahaan" />
    <Button
        android:id="@+id/btnAturJamPulangEditPerusahaan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/atur_jam_pulang"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintTop_toBottomOf="@+id/btnAturJamMasukEditPerusahaan"
        android:visibility="invisible"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Lokasi"
        android:id="@+id/btnCekLokasiPerusahaanEditPerusahaan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEditEditPerusahaan"
        android:layout_marginStart="16dp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/btnCekLokasiPerusahaanEditPerusahaan"
        android:text="lokasi perusahaan"
        android:textSize="16dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btnEditEditPerusahaan"
        android:id="@+id/editLokasiPerusahaanEditPerusahaan"
        android:enabled="false"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Work Hours (jam)"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btnCekLokasiPerusahaanEditPerusahaan"
        android:id="@+id/txtWorkHoursEditPerusahaan"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text=" per Week :"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/txtWorkHoursEditPerusahaan"
        android:id="@+id/txtWorkHoursWeekEditPerusahaan"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text=" per Day :"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingLeft="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editWorkHoursWeekEditPerusahaan"
        android:id="@+id/txtWorkHoursDayEditPerusahaan"/>
    <EditText
        android:id="@+id/editWorkHoursWeekEditPerusahaan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="40"
        android:text="40"
        android:textAlignment="center"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/txtWorkHoursWeekEditPerusahaan"
        app:layout_constraintTop_toBottomOf="@+id/txtWorkHoursEditPerusahaan"
        android:enabled="false"
        />
    <EditText
        android:id="@+id/editWorkHoursDayEditPerusahaan"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="8"
        android:text="8"
        android:inputType="number"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@id/txtWorkHoursWeekEditPerusahaan"
        app:layout_constraintTop_toBottomOf="@+id/editWorkHoursWeekEditPerusahaan"
        android:enabled="false"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>
